# Food-Explained

./: .gitignore  README.md  app.py  barcode.py  context_builder.py  main.py  ocr.py  pyproject.toml  reasoner.py  test_claude.py
src/config/: prompts_config.py  settings.py
src/context/: builder.py  memory.py  schemas.py
src/core/: barcode.py  ocr.py  product_preview.py
src/reasoning/: chains.py
src/ui/: components.py
